application/config/samples/gateway.yaml
# Copyright 2025 Deutsche Telekom IT GmbH
#
# SPDX-License-Identifier: Apache-2.0

apiVersion: gateway.cp.ei.telekom.de/v1
kind: Gateway
metadata:
  labels:
    app.kubernetes.io/name: gateway
    app.kubernetes.io/managed-by: kustomize
    cp.ei.telekom.de/environment: default
  name: stargate
spec:
  type: KONG
  url: http://localhost:8001
  adminClientId: sample_adminClientId
  adminClientSecret: sample_adminClientSecret
  issuerUrl: https://iris-distcp1-dataplane1.dev.dhei.telekom.de/auth/realms/rover
  hosts:
  - localhost:8000
  - localhost:8001
